--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,10 +47,12 @@ android {
         applicationId "dre.bsr.instagram_clone"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion 16
-        targetSdkVersion flutter.targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion flutter.targetSdkVersion 
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
+        
     }
 
     buildTypes {    
