--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   cloud_firestore: ^4.3.2
   firebase_auth: ^4.2.6
   firebase_storage: ^11.0.11
+  image_picker: ^0.8.6+1
+  provider: ^6.0.5
   flutter:
     sdk: flutter
 
@@ -62,9 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/Instagram.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
